Fix navbar overflow in mobile devices

--- a/website/static/css/main.scss
+++ b/website/static/css/main.scss
@@ -437,6 +437,16 @@ code {
 
 // navbar collapse breakpoint change
 @media (max-width: 1200px) {
+    #websiteNavbar {
+        min-height: 60px;
+        position: relative;
+        margin-bottom: 0px;
+    }
+
+    #superContentContainer {
+        margin-top: 0;
+    }
+
     .navbar-header {
         float: none;
     }
@@ -486,6 +496,9 @@ code {
 
 @media (max-width: 768px) {
     #websiteNavbar {
+        min-height: 60px;
+        position: relative;
+        margin-bottom: 0px;
         .container-fluid {
             .container {
                 background: #fff;
@@ -510,6 +523,6 @@ code {
     }
 
     #superContentContainer{
-        margin-top: 60px;
+        margin-top: 0px;
     }
 }
